Alpha Warning now is visible in all pages as fixed bug.

--- a/source/assets/css/styl/pages/_home.styl
+++ b/source/assets/css/styl/pages/_home.styl
@@ -13,8 +13,6 @@
             z-index 0
             max-width 100%
             position absolute
-    .alpha-warning
-        color var(--main-page-color)
 
 .home__section
     text-align center
