--- a/source/assets/css/styl/partials/_footer.styl
+++ b/source/assets/css/styl/partials/_footer.styl
@@ -45,6 +45,34 @@
     fontSize(14)
     margin-bottom 0
 
+.scrollbar--calculated
+    .alpha-warning
+        width calc(100vw - var(--scrollbar))
+
+.menu--opened
+    .alpha-warning
+        z-index 0
+
+.alpha-warning
+    left 0
+    bottom 0
+    width 100%
+    z-index 10
+    opacity .8
+    position fixed
+    text-align right
+    padding-bottom 25px
+    pointer-events none
+    span
+        color white
+        fontSize(16)
+        font-weight 500
+        padding 5px 15px
+        border-radius 30px
+        display inline-block
+        text-transform uppercase
+        background-color $darkGrey
+
 /* ---------------------------- *\
 
     $Media $Queries
